--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-	"name": "celesti",
+	"name": "@brother-donkey/celesti",
 	"version": "1.0.0",
 	"description": "A small package designed to create a beautiful constellation of moving elements.",
+	"repository": {
+		"type": "git",
+		"url": "ssh://git@github.com/brother-donkey/celesti.git"
+	},
 	"main": "dist/index.js",
 	"scripts": {
 		"start": "parcel index.html",
@@ -14,5 +18,8 @@
 		"cssnano": "^4.1.4",
 		"sass": "^1.14.1",
 		"typescript": "^3.1.1"
+	},
+	"publishConfig": {
+		"registry": "https://npm.pkg.github.com/brother-donkey"
 	}
 }
