--- a/main.yml
+++ b/main.yml
@@ -6,9 +6,9 @@ name: CI
 # events but only for the master branch
 on:
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -19,21 +19,23 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
 
-    # Runs a single command using the runners shell
-    - name: Run a one-line script
-      run: yarn build-docs
-    
-    - name: Copy to Azure Blob Storage
-      uses: bacongobbler/azure-blob-storage-upload@v1.1.0
-      with:
-        # The connection string for the storage account
-        connection_string: ${{ secrets.ConnectionString }}
-        # The name of the storage account container these assets will be uploaded to
-        container_name: $web
-        # The name of the directory you want to upload
-        source_dir: docs
+      # Runs a single command using the runners shell
+      - name: Yarn installation
+        run: yarn install
 
+      # Runs a single command using the runners shell
+      - name: Run a one-line script
+        run: yarn build-docs
 
+      - name: Copy to Azure Blob Storage
+        uses: bacongobbler/azure-blob-storage-upload@v1.1.0
+        with:
+          # The connection string for the storage account
+          connection_string: ${{ secrets.ConnectionString }}
+          # The name of the storage account container these assets will be uploaded to
+          container_name: $web
+          # The name of the directory you want to upload
+          source_dir: docs
