--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@parcel/transformer-sass": "^2.0.0-beta.2",
 		"cssnano": "^4.1.4",
-		"sass": "^1.14.1",
-		"typescript": "^3.1.1"
-	}
+		"parcel": "next",
+		"sass": "^1.32.8",
+		"typescript": "^3.9.9"
+	},
+	"dependencies": {}
 }
