--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 	"scripts": {
 		"start": "parcel index.html",
 		"build": "tsc -p ./tsconfig.json",
-		"build-docs": "parcel build index.html --out-dir ./docs"
+		"build-docs": "parcel build index.html --out-dir ./docs",
+		"prepublishOnly": "npm run build"
 	},
 	"author": "",
 	"license": "ISC",
